--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
 			apiKey: "AIzaSyCuTQ4a2znu4NezpilyL2QAyMQHt5SAozE",
 			authDomain: "focus3-df69e.firebaseapp.com",
 			projectId: "focus3-df69e",
-			storageBucket: "focus3-df69e.firebasestorage.app",
+			storageBucket: "focus3-df69e.appspot.com",  // ← ИСПРАВЛЕНО
 			messagingSenderId: "820116608318",
 			appId: "1:820116608318:web:927be143470b2aa885c86f"
 		};
+
 
         const app = initializeApp(firebaseConfig);
         const db = getFirestore(app);
