--- a/index.html
+++ b/index.html
@@ -6,78 +6,140 @@
     <title>Пробег автомобиля</title>
 
     <style>
-/* Затенение */
-.overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0,0,0,0.55);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    backdrop-filter: blur(3px);
-    opacity: 0;
-    pointer-events: none;
-    transition: opacity 0.35s ease;
-}
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
 
-.overlay.show {
-    opacity: 1;
-    pointer-events: auto;
-}
+            /* Фон страницы */
+            background-image: url("car.jpg");
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
 
-/* Модальное окно */
-.modal {
-    background: white;
-    padding: 25px;
-    width: 320px;
-    border-radius: 14px;
-    text-align: center;
-    box-shadow: 0 10px 35px rgba(0,0,0,0.3);
-    transform: translateY(30px);
-    opacity: 0;
-    animation: fadeInUp 0.4s forwards;
-}
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
 
-@keyframes fadeInUp {
-    to {
-        transform: translateY(0);
-        opacity: 1;
-    }
-}
+        /* Карточка ввода */
+        .card {
+            background: rgba(255, 255, 255, 0.85);
+            padding: 25px 35px;
+            border-radius: 12px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+            text-align: center;
+            max-width: 350px;
+            width: 100%;
+            backdrop-filter: blur(6px);
+        }
 
-.modal input {
-    width: 100%;
-    padding: 12px;
-    margin: 10px 0;
-    border-radius: 8px;
-    border: 1px solid #999;
-}
+        h1 {
+            font-size: 22px;
+            margin-bottom: 15px;
+            color: #333;
+        }
 
-.modal button {
-    width: 100%;
-    padding: 12px;
-    border: none;
-    border-radius: 8px;
-    background: #0078ff;
-    color: white;
-    font-size: 18px;
-    cursor: pointer;
-}
+        input {
+            width: 100%;
+            padding: 12px;
+            margin-bottom: 15px;
+            border-radius: 8px;
+            border: 1px solid #999;
+            font-size: 16px;
+        }
 
-.error {
-    color: red;
-    margin-top: 8px;
-    min-height: 18px;
-}
+        button {
+            width: 100%;
+            padding: 12px;
+            border: none;
+            border-radius: 8px;
+            background-color: #0078ff;
+            color: white;
+            font-size: 17px;
+            cursor: pointer;
+            font-weight: bold;
+            transition: 0.2s;
+        }
 
-.hidden {
-    display: none;
-}
+        button:hover {
+            background-color: #005fcc;
+        }
+
+        /* ===== МОААЛЬНОЕ ОКНО АВТОРИЗАЦИИ ===== */
+
+        .overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0,0,0,0.55);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            backdrop-filter: blur(3px);
+            opacity: 0;
+            pointer-events: none;
+            transition: opacity 0.35s ease;
+        }
+
+        .overlay.show {
+            opacity: 1;
+            pointer-events: auto;
+        }
+
+        .modal {
+            background: white;
+            padding: 25px;
+            width: 320px;
+            border-radius: 14px;
+            text-align: center;
+            box-shadow: 0 10px 35px rgba(0, 0, 0, 0.3);
+            transform: translateY(30px);
+            opacity: 0;
+            animation: fadeInUp 0.4s forwards;
+        }
+
+        @keyframes fadeInUp {
+            to {
+                transform: translateY(0);
+                opacity: 1;
+            }
+        }
+
+        .modal input {
+            width: 100%;
+            padding: 12px;
+            margin: 10px 0;
+            border-radius: 8px;
+            border: 1px solid #999;
+        }
+
+        .modal button {
+            width: 100%;
+            padding: 12px;
+            border: none;
+            border-radius: 8px;
+            background: #0078ff;
+            color: white;
+            font-size: 18px;
+            cursor: pointer;
+        }
+
+        .error {
+            color: red;
+            margin-top: 8px;
+            min-height: 18px;
+        }
+
+        .hidden {
+            display: none;
+        }
     </style>
 </head>
+
 <body>
 
     <div class="card">
@@ -89,75 +151,71 @@
         </form>
     </div>
 
-    <!-- Модальное окно авторизации -->
+    <!-- Модальное окно -->
     <div id="authOverlay" class="overlay hidden">
         <div class="modal">
             <h2>Авторизация</h2>
+
             <input type="email" id="authEmail" placeholder="Email" required>
             <input type="password" id="authPassword" placeholder="Пароль" required>
+
             <button id="authLoginBtn">Войти</button>
+
             <p id="authError" class="error"></p>
         </div>
     </div>
 
     <!-- FIREBASE SCRIPT -->
-<script type="module">
+    <script type="module">
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
+        import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
+        import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js";
 
-import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
-import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
-import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js";
+        const firebaseConfig = {
+            apiKey: "AIzaSyCuTQ4a2znu4NezpilyL2QAyMQHt5SAozE",
+            authDomain: "focus3-df69e.firebaseapp.com",
+            projectId: "focus3-df69e",
+            storageBucket: "focus3-df69e.appspot.com",
+            messagingSenderId: "820116608318",
+            appId: "1:820116608318:web:927be143470b2aa885c86f"
+        };
 
-const firebaseConfig = {
-    apiKey: "AIzaSyCuTQ4a2znu4NezpilyL2QAyMQHt5SAozE",
-    authDomain: "focus3-df69e.firebaseapp.com",
-    projectId: "focus3-df69e",
-    storageBucket: "focus3-df69e.appspot.com",
-    messagingSenderId: "820116608318",
-    appId: "1:820116608318:web:927be143470b2aa885c86f"
-};
+        const app = initializeApp(firebaseConfig);
+        const db = getFirestore(app);
+        const auth = getAuth(app);
 
-const app = initializeApp(firebaseConfig);
-const db = getFirestore(app);
-const auth = getAuth(app);
+        const overlay = document.getElementById("authOverlay");
+        let pendingMileage = null;
 
-// DOM элементы
-const overlay = document.getElementById("authOverlay");
-let pendingMileage = null;
+        document.getElementById("mileageForm").addEventListener("submit", (e) => {
+            e.preventDefault();
+            pendingMileage = Number(document.getElementById("mileage").value);
 
-// Открываем модалку после нажатия "Сохранить"
-document.getElementById("mileageForm").addEventListener("submit", (e) => {
-    e.preventDefault();
-    pendingMileage = Number(document.getElementById("mileage").value);
-
-    // показываем модалку
-    overlay.classList.remove("hidden");
-    overlay.classList.add("show");
-});
-
-// Обрабатываем авторизацию
-document.getElementById("authLoginBtn").addEventListener("click", async () => {
-    const email = document.getElementById("authEmail").value;
-    const password = document.getElementById("authPassword").value;
-
-    try {
-        await signInWithEmailAndPassword(auth, email, password);
-
-        // Если авторизация успешна → сохраняем пробег
-        await addDoc(collection(db, "mileages"), {
-            mileage: pendingMileage,
-            date: new Date().toISOString()
+            overlay.classList.remove("hidden");
+            overlay.classList.add("show");
         });
 
-        alert("Пробег сохранён!");
-        window.location.reload(); // обновим страницу
+        document.getElementById("authLoginBtn").addEventListener("click", async () => {
+            const email = document.getElementById("authEmail").value;
+            const password = document.getElementById("authPassword").value;
 
-    } catch (err) {
-        document.getElementById("authError").textContent = "Ошибка: " + err.message;
-    }
-});
+            try {
+                await signInWithEmailAndPassword(auth, email, password);
 
-</script>
+                await addDoc(collection(db, "mileages"), {
+                    mileage: pendingMileage,
+                    date: new Date().toISOString()
+                });
 
+                alert("Пробег сохранён!");
+                window.location.reload();
+
+            } catch (err) {
+                document.getElementById("authError").textContent =
+                    "Ошибка: " + err.message;
+            }
+        });
+    </script>
 
 </body>
 </html>
