--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Пробег автомобиля</title>
 
     <style>
+        /* ==== ОБЩИЙ ФОН ==== */
         body {
             margin: 0;
             padding: 0;
-            font-family: Arial, sans-serif;
+            font-family: "Segoe UI", Arial, sans-serif;
 
-            /* Фон страницы */
             background-image: url("car.jpg");
             background-size: cover;
             background-position: center;
@@ -21,65 +21,131 @@
             display: flex;
             justify-content: center;
             align-items: center;
+
+            animation: fadeInBody 1.2s ease;
         }
 
-        /* Карточка ввода */
+        @keyframes fadeInBody {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+
+        /* ==== ГЛАВНАЯ КАРТОЧКА (GLASSMORPHISM) ==== */
         .card {
-            background: rgba(255, 255, 255, 0.85);
-            padding: 25px 35px;
-            border-radius: 12px;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+            background: rgba(255, 255, 255, 0.18);
+            padding: 35px 45px;
+            border-radius: 18px;
+
+            backdrop-filter: blur(12px) saturate(180%);
+            -webkit-backdrop-filter: blur(12px) saturate(180%);
+
+            border: 1px solid rgba(255, 255, 255, 0.35);
+
             text-align: center;
-            max-width: 350px;
+            max-width: 360px;
             width: 100%;
-            backdrop-filter: blur(6px);
+
+            box-shadow: 0 8px 32px rgba(0,0,0,0.35);
+
+            transform: translateY(25px);
+            opacity: 0;
+            animation: fadeUp 0.9s forwards ease-out;
+        }
+
+        @keyframes fadeUp {
+            to {
+                transform: translateY(0);
+                opacity: 1;
+            }
         }
 
         h1 {
-            font-size: 22px;
+            font-size: 26px;
             margin-bottom: 15px;
-            color: #333;
+            color: #fff;
+            text-shadow: 0 0 6px rgba(0,0,0,0.4);
         }
 
+        /* ==== INPUT ==== */
         input {
             width: 100%;
             padding: 12px;
-            margin-bottom: 15px;
-            border-radius: 8px;
-            border: 1px solid #999;
+            margin-bottom: 18px;
+            border-radius: 10px;
+            border: none;
+
             font-size: 16px;
+            background: rgba(255,255,255,0.8);
         }
 
+        input:focus {
+            outline: 2px solid rgba(0,120,255,0.7);
+        }
+
+        /* ==== BUTTON ==== */
         button {
             width: 100%;
             padding: 12px;
             border: none;
-            border-radius: 8px;
-            background-color: #0078ff;
+            border-radius: 10px;
+
+            background: linear-gradient(135deg, #6ba8ff, #005fcc);
             color: white;
-            font-size: 17px;
+
+            font-size: 18px;
             cursor: pointer;
             font-weight: bold;
-            transition: 0.2s;
+
+            transition: 0.25s;
+            box-shadow: 0 4px 18px rgba(0,0,0,0.25);
         }
 
         button:hover {
-            background-color: #005fcc;
+            transform: scale(1.03);
+            box-shadow: 0 6px 22px rgba(0,0,0,0.35);
         }
 
-        /* ===== МОААЛЬНОЕ ОКНО АВТОРИЗАЦИИ ===== */
+        /* ==== Кнопка "Создать аккаунт" ==== */
+        .register-top-btn, .logout-btn {
+            position: absolute;
+            top: 25px;
+            left: 50%;
+            transform: translateX(-50%);
 
+            background: rgba(255, 255, 255, 0.35);
+            padding: 10px 18px;
+            border-radius: 12px;
+            border: 1px solid rgba(255,255,255,0.5);
+
+            font-size: 16px;
+            cursor: pointer;
+            font-weight: 500;
+            color: #fff;
+
+            backdrop-filter: blur(8px);
+            -webkit-backdrop-filter: blur(8px);
+
+            transition: 0.25s;
+        }
+
+        .register-top-btn:hover, .logout-btn:hover {
+            background: rgba(255,255,255,0.55);
+        }
+
+        /* ==== Модальные окна ==== */
         .overlay {
             position: fixed;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
+
             background: rgba(0,0,0,0.55);
             display: flex;
             justify-content: center;
             align-items: center;
-            backdrop-filter: blur(3px);
+
+            backdrop-filter: blur(4px);
             opacity: 0;
             pointer-events: none;
             transition: opacity 0.35s ease;
@@ -91,57 +157,45 @@
         }
 
         .modal {
-            background: white;
+            background: rgba(255, 255, 255, 0.8);
             padding: 25px;
             width: 320px;
-            border-radius: 14px;
+            border-radius: 16px;
+
+            backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
+
             text-align: center;
-            box-shadow: 0 10px 35px rgba(0, 0, 0, 0.3);
+            box-shadow: 0 10px 35px rgba(0, 0, 0, 0.35);
+
             transform: translateY(30px);
             opacity: 0;
-            animation: fadeInUp 0.4s forwards;
-        }
-
-        @keyframes fadeInUp {
-            to {
-                transform: translateY(0);
-                opacity: 1;
-            }
+            animation: fadeUp 0.4s forwards ease-out;
         }
 
         .modal input {
-            width: 100%;
-            padding: 12px;
-            margin: 10px 0;
-            border-radius: 8px;
-            border: 1px solid #999;
-        }
-
-        .modal button {
-            width: 100%;
-            padding: 12px;
-            border: none;
-            border-radius: 8px;
-            background: #0078ff;
-            color: white;
-            font-size: 18px;
-            cursor: pointer;
+            background: rgba(255,255,255,0.95);
         }
 
         .error {
-            color: red;
+            color: rgb(255, 60, 60);
             margin-top: 8px;
             min-height: 18px;
         }
 
-        .hidden {
-            display: none;
-        }
+        .hidden { display: none; }
     </style>
 </head>
 
 <body>
 
+    <!-- КНОПКА СОЗДАТЬ АККАУНТ -->
+    <button class="register-top-btn" id="openRegisterBtn">Создать аккаунт</button>
+
+    <!-- КНОПКА ВЫЙТИ (пока скрыта, покажем если юзер вошёл) -->
+    <button class="logout-btn hidden" id="logoutBtn">Выйти</button>
+
+    <!-- КАРТОЧКА -->
     <div class="card">
         <h1>Введите пробег</h1>
 
@@ -151,7 +205,7 @@
         </form>
     </div>
 
-    <!-- Модальное окно -->
+    <!-- МОДАЛКА АВТОРИЗАЦИИ -->
     <div id="authOverlay" class="overlay hidden">
         <div class="modal">
             <h2>Авторизация</h2>
@@ -165,11 +219,32 @@
         </div>
     </div>
 
-    <!-- FIREBASE SCRIPT -->
+    <!-- МОДАЛКА РЕГИСТРАЦИИ -->
+    <div id="registerOverlay" class="overlay hidden">
+        <div class="modal">
+            <h2>Регистрация</h2>
+
+            <input type="email" id="regEmail" placeholder="Email" required>
+            <input type="password" id="regPassword" placeholder="Пароль" required>
+
+            <button id="regCreateBtn">Создать аккаунт</button>
+
+            <p id="regError" class="error"></p>
+        </div>
+    </div>
+
+    <!-- FIREBASE LOGIC -->
     <script type="module">
+
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
         import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
-        import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js";
+        import { 
+            getAuth, 
+            signInWithEmailAndPassword,
+            createUserWithEmailAndPassword,
+            signOut,
+            onAuthStateChanged
+        } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js";
 
         const firebaseConfig = {
             apiKey: "AIzaSyCuTQ4a2znu4NezpilyL2QAyMQHt5SAozE",
@@ -184,17 +259,41 @@
         const db = getFirestore(app);
         const auth = getAuth(app);
 
-        const overlay = document.getElementById("authOverlay");
         let pendingMileage = null;
 
+        const authOverlay = document.getElementById("authOverlay");
+        const registerOverlay = document.getElementById("registerOverlay");
+        const logoutBtn = document.getElementById("logoutBtn");
+        const registerTopBtn = document.getElementById("openRegisterBtn");
+
+        /* ==== Проверка пользователя ==== */
+        onAuthStateChanged(auth, (user) => {
+            if (user) {
+                logoutBtn.classList.remove("hidden");
+                registerTopBtn.classList.add("hidden");
+            } else {
+                logoutBtn.classList.add("hidden");
+                registerTopBtn.classList.remove("hidden");
+            }
+        });
+
+        /* ==== Выход ==== */
+        logoutBtn.addEventListener("click", async () => {
+            await signOut(auth);
+            alert("Вы вышли из аккаунта");
+            window.location.reload();
+        });
+
+        /* ==== Открытие авторизации ==== */
         document.getElementById("mileageForm").addEventListener("submit", (e) => {
             e.preventDefault();
             pendingMileage = Number(document.getElementById("mileage").value);
 
-            overlay.classList.remove("hidden");
-            overlay.classList.add("show");
+            authOverlay.classList.remove("hidden");
+            authOverlay.classList.add("show");
         });
 
+        /* ==== Вход ==== */
         document.getElementById("authLoginBtn").addEventListener("click", async () => {
             const email = document.getElementById("authEmail").value;
             const password = document.getElementById("authPassword").value;
@@ -215,6 +314,35 @@
                     "Ошибка: " + err.message;
             }
         });
+
+        /* ==== Открытие регистрации ==== */
+        document.getElementById("openRegisterBtn").addEventListener("click", () => {
+            registerOverlay.classList.remove("hidden");
+            registerOverlay.classList.add("show");
+        });
+
+        /* ==== Создание аккаунта ==== */
+        document.getElementById("regCreateBtn").addEventListener("click", async () => {
+            const email = document.getElementById("regEmail").value;
+            const password = document.getElementById("regPassword").value;
+
+            try {
+                await createUserWithEmailAndPassword(auth, email, password);
+
+                await addDoc(collection(db, "mileages"), {
+                    mileage: pendingMileage,
+                    date: new Date().toISOString()
+                });
+
+                alert("Аккаунт создан и пробег сохранён!");
+                window.location.reload();
+
+            } catch (err) {
+                document.getElementById("regError").textContent =
+                    "Ошибка: " + err.message;
+            }
+        });
+
     </script>
 
 </body>
