--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Пробег автомобиля</title>
 
     <style>
-        /* ==== ОБЩИЙ ФОН ==== */
+        /* ==== ГЛОБАЛЬНЫЙ ФОН ==== */
         body {
             margin: 0;
             padding: 0;
@@ -30,15 +30,13 @@
             to { opacity: 1; }
         }
 
-        /* ==== ГЛАВНАЯ КАРТОЧКА (GLASS) ==== */
+        /* ==== ГЛАВНАЯ СТЕКЛЯННАЯ КАРТОЧКА ==== */
         .card {
             background: rgba(255, 255, 255, 0.18);
             padding: 35px 45px;
             border-radius: 18px;
-
             backdrop-filter: blur(12px) saturate(180%);
             -webkit-backdrop-filter: blur(12px) saturate(180%);
-
             border: 1px solid rgba(255, 255, 255, 0.35);
 
             text-align: center;
@@ -73,7 +71,6 @@
             margin-bottom: 18px;
             border-radius: 10px;
             border: none;
-
             font-size: 16px;
             background: rgba(255,255,255,0.8);
         }
@@ -82,31 +79,30 @@
             outline: 2px solid rgba(0,120,255,0.7);
         }
 
-        /* ==== BUTTON ==== */
+        /* ==== ОСНОВНЫЕ КНОПКИ ==== */
         button {
             width: 100%;
             padding: 12px;
             border: none;
             border-radius: 10px;
-
             background: linear-gradient(135deg, #6ba8ff, #005fcc);
             color: white;
-
             font-size: 18px;
             cursor: pointer;
             font-weight: bold;
 
-            transition: 0.25s;
             box-shadow: 0 4px 18px rgba(0,0,0,0.25);
+            transition: background 0.25s, box-shadow 0.25s;
         }
 
         button:hover {
-            transform: scale(1.03);
+            background: linear-gradient(135deg, #82b8ff, #1d6fe2);
             box-shadow: 0 6px 22px rgba(0,0,0,0.35);
         }
 
-        /* ==== КНОПКА РЕГИСТРАЦИИ ВВЕРХУ ==== */
-        .register-top-btn, .logout-btn {
+        /* ==== КНОПКИ СВЕРХУ (Создать аккаунт / Выйти) ==== */
+        .register-top-btn,
+        .logout-btn {
             position: absolute;
             top: 25px;
             left: 50%;
@@ -125,14 +121,16 @@
             backdrop-filter: blur(8px);
             -webkit-backdrop-filter: blur(8px);
 
-            transition: 0.25s;
+            transition: background 0.25s, box-shadow 0.25s;
         }
 
-        .register-top-btn:hover, .logout-btn:hover {
+        .register-top-btn:hover,
+        .logout-btn:hover {
             background: rgba(255,255,255,0.55);
+            box-shadow: 0 0 12px rgba(255,255,255,0.6);
         }
 
-        /* ==== МОДАЛКИ ==== */
+        /* ==== МОДАЛЬНЫЕ ОКНА ==== */
         .overlay {
             position: fixed;
             top: 0;
@@ -140,7 +138,6 @@
             width: 100%;
             height: 100%;
             background: rgba(0,0,0,0.55);
-
             display: flex;
             justify-content: center;
             align-items: center;
@@ -162,16 +159,18 @@
             padding: 25px;
             width: 320px;
             border-radius: 16px;
-
             backdrop-filter: blur(10px);
             -webkit-backdrop-filter: blur(10px);
-
             text-align: center;
             box-shadow: 0 10px 35px rgba(0, 0, 0, 0.35);
 
             transform: translateY(30px);
             opacity: 0;
             animation: fadeUp 0.4s forwards ease-out;
+        }
+
+        .modal input {
+            background: rgba(255,255,255,0.95);
         }
 
         /* Кнопка-крестик */
@@ -191,10 +190,6 @@
             transform: scale(1.15);
         }
 
-        .modal input {
-            background: rgba(255,255,255,0.95);
-        }
-
         .error {
             color: rgb(255, 60, 60);
             margin-top: 8px;
@@ -207,13 +202,13 @@
 
 <body>
 
-    <!-- КНОПКА "СОЗДАТЬ АККАУНТ" -->
+    <!-- КНОПКА "Создать аккаунт" -->
     <button class="register-top-btn" id="openRegisterBtn">Создать аккаунт</button>
 
-    <!-- КНОПКА "ВЫЙТИ" -->
+    <!-- КНОПКА "Выйти" -->
     <button class="logout-btn hidden" id="logoutBtn">Выйти</button>
 
-    <!-- КАРТОЧКА -->
+    <!-- ГЛАВНАЯ КАРТОЧКА -->
     <div class="card">
         <h1>Введите пробег</h1>
 
@@ -284,7 +279,7 @@
         const logoutBtn = document.getElementById("logoutBtn");
         const registerTopBtn = document.getElementById("openRegisterBtn");
 
-        /* ==== Проверяем, вошёл ли пользователь ==== */
+        /* ==== Проверка авторизации ==== */
         onAuthStateChanged(auth, (user) => {
             if (user) {
                 logoutBtn.classList.remove("hidden");
@@ -295,14 +290,14 @@
             }
         });
 
-        /* ==== Выход ==== */
+        /* ==== Выйти ==== */
         logoutBtn.addEventListener("click", async () => {
             await signOut(auth);
             alert("Вы вышли из аккаунта");
             window.location.reload();
         });
 
-        /* ==== Открытие модалки авторизации ==== */
+        /* ==== Нажатие "Сохранить" → открыть авторизацию ==== */
         document.getElementById("mileageForm").addEventListener("submit", (e) => {
             e.preventDefault();
             pendingMileage = Number(document.getElementById("mileage").value);
@@ -311,7 +306,7 @@
             authOverlay.classList.add("show");
         });
 
-        /* ==== Закрытие авторизации крестиком ==== */
+        /* ==== Закрыть авторизацию ==== */
         document.getElementById("closeAuth").addEventListener("click", () => {
             authOverlay.classList.remove("show");
             setTimeout(() => authOverlay.classList.add("hidden"), 300);
@@ -339,19 +334,19 @@
             }
         });
 
-        /* ==== Открытие регистрации ==== */
+        /* ==== Открыть регистрацию ==== */
         document.getElementById("openRegisterBtn").addEventListener("click", () => {
             registerOverlay.classList.remove("hidden");
             registerOverlay.classList.add("show");
         });
 
-        /* ==== Закрытие регистрации крестиком ==== */
+        /* ==== Закрыть регистрацию ==== */
         document.getElementById("closeRegister").addEventListener("click", () => {
             registerOverlay.classList.remove("show");
             setTimeout(() => registerOverlay.classList.add("hidden"), 300);
         });
 
-        /* ==== Создание аккаунта ==== */
+        /* ==== Создать аккаунт ==== */
         document.getElementById("regCreateBtn").addEventListener("click", async () => {
             const email = document.getElementById("regEmail").value;
             const password = document.getElementById("regPassword").value;
